--- a/src/index.css
+++ b/src/index.css
@@ -191,12 +191,12 @@ ul {
   max-width: calc(33.333% - 20px);
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .product img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
+  width: 300px;
+  height: 250px;
 }
 
 .product h3 {
