added post detailed view, removed links underline from posts

--- a/src/index.css
+++ b/src/index.css
@@ -166,6 +166,12 @@ ul {
   transform: translateY(-5px);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
+
+/* POST DETAILS  */
+.post-detail{
+ padding: 3rem;
+}
+
 /* PRODUCT  */
 .productPage {
   padding: 20px;
